--- a/documentation/journal/2025-07-19.md
+++ b/documentation/journal/2025-07-19.md
@@ -1,2 +1,4 @@
 
 Forgot to log the past 3ish days. Attempted to install NixOS on this RPi3B+ but it is unable to run nix-rebuild by itself, so I'm going to use my laptop to perform the builds. This also means I needed to make a flake for the initial image. This is working as documented. The switch came in, Dell X1018P, it took awhile to figure out because the factor reset took a long time and I kept on pressing the buttons instead of just waiting. I set up 3 VLAN's on that, see the documentation for details. Right now Catpuccin and Nord are plugged in and accessible over network. I will configure Wireguard before doing Proxmox clustering.
+
+Got the RPI3 configured on the network, tomorrow I will start figuring out how to remote build with nix and set up wireguard. Also found some BIOS settings on the GMKtec mini's that I should us. Minor concerns about thermals on the mini's, but after a stress test I see that this one remained under 80 at 100% cpu.
