--- a/documentation/journal/2025-07-22.md
+++ b/documentation/journal/2025-07-22.md
@@ -7,3 +7,6 @@ All are EXOS, ST18000NM000J-2TV103
 | 2        | same  | Passed | passed               | passed          |
 | 3        | same  | Passed | passed               | passed          |
 | 4        | same  | Passed | passed               | passed          |
+
+
+Wireguard configuration for rpi server is probably working. For my t14 client I have slight issues. Not to0 bad I think, just wonky with using network manager to do stuff which isn't declarative.
