gruvbox: add immich-mars share

--- a/documentation/journal/2025-08-06.md
+++ b/documentation/journal/2025-08-06.md
@@ -1,2 +1,5 @@
 
-Making the base container template for nixos, is this slightly frustrating due to the 'impure'-ness of my resulting configurations, and I understand why flakes lock and track inputs now. But, I think due to the nature of the 
+Making the base container template for nixos, is this slightly frustrating due to the 'impure'-ness of my resulting configurations, and I understand why flakes lock and track inputs now. But, I think due to the nature of nixos it's not a super large issue if a container is created using one image or another... With terraform as well, I should be able to configure everything IaC.
+
+- Got immich working
+- Made a base nixos 'CT template'
