start terraform and documentation updates

--- a/documentation/journal/2026-01-05.md
+++ b/documentation/journal/2026-01-05.md
@@ -2,3 +2,5 @@
 Examined UPS, determined what I need to buy for a replacement battery, will probably do that next year.
 
 Restarting everything, I noticed that the wg-pi still lacked an ip address. I disabled network manager and upgraded to nixpkgs 25.11. Hard cutting power to the switch and pi to test if it comes back online correctly.
+
+wg-pi, immich-mars, gruvbox all upgraded to 25.11 no issues yet.
